Prevent entirely squashing

--- a/components/popover/theme.css
+++ b/components/popover/theme.css
@@ -54,6 +54,7 @@
   border-radius: var(--popover-border-radius);
   overflow: auto;
   position: relative;
+  min-height: var(--spacer-regular);
 }
 
 .neutral {
